# delta-table-maintenance

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_maintenance.py  maintenance.yml  targeted_operations.py
src/delta_maintenance/: __init__.py  analyzer.py  cli.py  config.py  models.py  optimizer.py  reports.py  runner.py  vacuum.py  zordering.py
tests/: test_analyzer.py  test_config.py  test_optimizer.py  test_runner.py
