[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delta-table-maintenance"
version = "0.1.0"
description = "Automated Delta Lake table maintenance — OPTIMIZE, VACUUM, Z-ORDER, and small-file detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Riaz Shaik" }]
keywords = [
    "pyspark", "delta-lake", "databricks", "optimize", "vacuum",
    "z-order", "table-maintenance", "data-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pyspark>=3.4",
    "delta-spark>=2.4",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
delta-maintain = "delta_maintenance.cli:main"

[project.urls]
Homepage = "https://github.com/riazshaik-nm/delta-table-maintenance"
Repository = "https://github.com/riazshaik-nm/delta-table-maintenance"
Issues = "https://github.com/riazshaik-nm/delta-table-maintenance/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/delta_maintenance"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
